Fixed invisible account links on mobile devices

--- a/web/css/source/_absolute.less
+++ b/web/css/source/_absolute.less
@@ -107,22 +107,14 @@ a:hover {
                 padding: 0;
             }
         }
-    }
-    .page-header{
-        .header {
-            &.content {
-                border-radius: 0px;
-            }
-        }
-    }
-    .header {
-        &.content {
+        .header.content {
+            border-radius: 0px;
             .slogan {
                 display: none;
             }
-        }
-        ul.links {
-            display: none;
+            > ul.links {
+                display: none;
+            }
         }
     }
 }
